--- a/kindling/kindling/Base.lproj/Main.storyboard
+++ b/kindling/kindling/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Spo-2X-6hP">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
@@ -22,9 +22,15 @@
                                 <rect key="frame" x="180" y="40" width="240" height="280"/>
                                 <animations/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="280" id="ifR-uz-OPa"/>
+                                    <constraint firstAttribute="width" constant="240" id="UYd-ti-m2u"/>
+                                    <constraint firstAttribute="height" constant="280" id="Vgm-4u-4sE"/>
                                     <constraint firstAttribute="width" constant="240" id="vsf-fa-D6M"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="vsf-fa-D6M"/>
+                                    </mask>
+                                </variation>
                                 <connections>
                                     <segue destination="jvk-UR-2OJ" kind="embed" id="Uig-ST-Mqz"/>
                                 </connections>
@@ -32,19 +38,38 @@
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="YwT-vY-Csx" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="64h-hl-1Rj"/>
-                            <constraint firstItem="YwT-vY-Csx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HnH-sB-OSG"/>
+                            <constraint firstItem="YwT-vY-Csx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Iec-5F-b7B"/>
+                            <constraint firstItem="YwT-vY-Csx" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="Z4j-Sr-fLW"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="neK-b8-DjD" appends="YES" id="hR3-gS-zLM"/>
+                        </connections>
                     </view>
+                    <navigationItem key="navigationItem" id="ETe-Ng-M8f"/>
+                    <connections>
+                        <outlet property="containerOutlet" destination="YwT-vY-Csx" id="72w-1X-wGU"/>
+                        <outlet property="horizontalContainerConstraint" destination="Iec-5F-b7B" id="lUA-cf-6IC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="neK-b8-DjD">
+                    <connections>
+                        <action selector="panGestureAction:" destination="BYZ-38-t0r" id="eeN-We-Wss"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="951" y="243"/>
         </scene>
         <!--Card View Controller-->
         <scene sceneID="I46-kQ-a6D">
             <objects>
                 <viewController id="jvk-UR-2OJ" customClass="CardViewController" customModule="kindling" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VIR-B7-Vmi"/>
+                        <viewControllerLayoutGuide type="bottom" id="c7X-q1-Ygr"/>
+                    </layoutGuides>
                     <view key="view" clipsSubviews="YES" contentMode="scaleToFill" id="I1G-nM-Xgu">
                         <rect key="frame" x="0.0" y="0.0" width="240" height="280"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -52,6 +77,7 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image3" translatesAutoresizingMaskIntoConstraints="NO" id="Vjn-nj-EUS">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="280"/>
                                 <animations/>
+                                <gestureRecognizers/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image4" translatesAutoresizingMaskIntoConstraints="NO" id="vN5-Fj-K1A" customClass="roundedImage" customModule="kindling" customModuleProvider="target">
                                 <rect key="frame" x="95" y="8" width="50" height="50"/>
@@ -61,47 +87,104 @@
                                     <constraint firstAttribute="height" constant="50" id="OSx-a6-pFk"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tBs-xn-flo">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tBs-xn-flo">
                                 <rect key="frame" x="16" y="66" width="208" height="21"/>
                                 <animations/>
                                 <color key="backgroundColor" red="0.7350771706" green="0.7350771706" blue="0.7350771706" alpha="0.85472074470000003" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="FtD-bL-grd"/>
+                                    <constraint firstAttribute="width" constant="208" id="K6Z-kx-2DP"/>
+                                    <constraint firstAttribute="height" constant="21" id="Kis-Wd-sOv"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="K6Z-kx-2DP"/>
+                                    </mask>
+                                </variation>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ux9-XF-aUI">
-                                <rect key="frame" x="16" y="239" width="208" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ux9-XF-aUI">
+                                <rect key="frame" x="12" y="239" width="216" height="21"/>
                                 <animations/>
                                 <color key="backgroundColor" red="0.73507717059336819" green="0.73507717059336819" blue="0.73507717059336819" alpha="0.85472074468085102" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="216" id="95n-Xu-RdG"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="95n-Xu-RdG"/>
+                                    </mask>
+                                </variation>
                             </label>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ux9-XF-aUI" firstAttribute="trailing" secondItem="I1G-nM-Xgu" secondAttribute="trailingMargin" id="0HL-DH-kjY"/>
+                            <constraint firstItem="tBs-xn-flo" firstAttribute="top" secondItem="vN5-Fj-K1A" secondAttribute="bottom" constant="8" symbolic="YES" id="0rA-QT-Hgg"/>
+                            <constraint firstItem="tBs-xn-flo" firstAttribute="centerX" secondItem="vN5-Fj-K1A" secondAttribute="centerX" id="2tT-we-HtQ"/>
                             <constraint firstItem="tBs-xn-flo" firstAttribute="trailing" secondItem="I1G-nM-Xgu" secondAttribute="trailingMargin" id="35E-yL-ndU"/>
                             <constraint firstItem="vN5-Fj-K1A" firstAttribute="top" secondItem="I1G-nM-Xgu" secondAttribute="topMargin" constant="8" id="6sn-hW-MQP"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ux9-XF-aUI" secondAttribute="trailing" constant="-4" id="Dza-om-e7f"/>
+                            <constraint firstItem="ux9-XF-aUI" firstAttribute="leading" secondItem="I1G-nM-Xgu" secondAttribute="leadingMargin" constant="-4" id="Ebd-LG-Coh"/>
                             <constraint firstItem="tBs-xn-flo" firstAttribute="leading" secondItem="I1G-nM-Xgu" secondAttribute="leadingMargin" id="O4x-Ts-CJt"/>
                             <constraint firstAttribute="trailing" secondItem="Vjn-nj-EUS" secondAttribute="trailing" id="TDv-Er-dJH"/>
+                            <constraint firstItem="c7X-q1-Ygr" firstAttribute="top" secondItem="ux9-XF-aUI" secondAttribute="bottom" constant="20" id="Tll-Gj-XCT"/>
                             <constraint firstItem="Vjn-nj-EUS" firstAttribute="leading" secondItem="I1G-nM-Xgu" secondAttribute="leading" id="WDU-tr-WxW"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="ux9-XF-aUI" secondAttribute="bottom" constant="20" id="Wqo-G8-TMM"/>
+                            <constraint firstAttribute="trailing" secondItem="tBs-xn-flo" secondAttribute="trailing" constant="16" id="h8y-Kx-v6h"/>
+                            <constraint firstItem="tBs-xn-flo" firstAttribute="top" secondItem="vN5-Fj-K1A" secondAttribute="bottom" constant="8" id="kGc-Bt-grM"/>
+                            <constraint firstItem="ux9-XF-aUI" firstAttribute="leading" secondItem="I1G-nM-Xgu" secondAttribute="leading" constant="12" id="kfI-JY-9Gf"/>
+                            <constraint firstItem="tBs-xn-flo" firstAttribute="leading" secondItem="I1G-nM-Xgu" secondAttribute="leading" constant="16" id="lvS-F5-zIl"/>
                             <constraint firstItem="vN5-Fj-K1A" firstAttribute="centerX" secondItem="Vjn-nj-EUS" secondAttribute="centerX" id="pWj-Ps-IR3"/>
+                            <constraint firstItem="tBs-xn-flo" firstAttribute="leading" secondItem="I1G-nM-Xgu" secondAttribute="leadingMargin" id="sO2-eQ-eGS"/>
                             <constraint firstAttribute="bottom" secondItem="Vjn-nj-EUS" secondAttribute="bottom" id="sTA-nU-sMF"/>
-                            <constraint firstItem="tBs-xn-flo" firstAttribute="top" secondItem="vN5-Fj-K1A" secondAttribute="bottom" constant="8" id="tbK-2a-tYv"/>
+                            <constraint firstItem="c7X-q1-Ygr" firstAttribute="top" secondItem="ux9-XF-aUI" secondAttribute="bottom" constant="20" id="wce-TU-gJe"/>
                             <constraint firstItem="Vjn-nj-EUS" firstAttribute="top" secondItem="I1G-nM-Xgu" secondAttribute="top" id="xGc-jh-XLt"/>
                             <constraint firstItem="ux9-XF-aUI" firstAttribute="leading" secondItem="I1G-nM-Xgu" secondAttribute="leadingMargin" id="xy4-Qn-xgs"/>
+                            <constraint firstAttribute="trailing" secondItem="ux9-XF-aUI" secondAttribute="trailing" constant="12" id="ySk-T8-dp3"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="0rA-QT-Hgg"/>
+                                <exclude reference="2tT-we-HtQ"/>
+                                <exclude reference="35E-yL-ndU"/>
+                                <exclude reference="O4x-Ts-CJt"/>
+                                <exclude reference="sO2-eQ-eGS"/>
+                                <exclude reference="0HL-DH-kjY"/>
+                                <exclude reference="Dza-om-e7f"/>
+                                <exclude reference="Ebd-LG-Coh"/>
+                                <exclude reference="xy4-Qn-xgs"/>
+                                <exclude reference="wce-TU-gJe"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rhb-fD-O0W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="305" y="1041"/>
+            <point key="canvasLocation" x="304" y="1112"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="UfW-Kq-OcQ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="Spo-2X-6hP" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="guL-UT-pv2">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="xok-cc-mpu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2As-An-mRb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="304" y="-449"/>
         </scene>
     </scenes>
     <resources>
